--- a/src/index.css
+++ b/src/index.css
@@ -750,56 +750,21 @@ body {
   }
 }
 
-/* Animated noise effect */
-body::before {
-  content: "";
-  position: fixed;
-  top: -50%;
-  left: -50%;
-  width: 200%;
-  height: 200%;
-  background: transparent
-    url("http://assets.iceable.com/img/noise-transparent.png") repeat 0 0;
-  background-size: 300px 300px;
-  animation: noise 0.3s steps(5) infinite;
-  opacity: 0.9;
-  will-change: transform;
-  z-index: 100;
-  pointer-events: none;
+/* Grainy gradient background */
+html {
+  height: 100%;
+  overflow-x: hidden;
+  background: radial-gradient(circle at 30% 20%, hsl(var(--primary) / 0.15), hsl(var(--primary) / 0.05) 50%, hsl(var(--background)) 100%);
+  filter: url(#grainy);
 }
 
-@keyframes noise {
-  0% {
-    transform: translate(0, 0);
-  }
-  10% {
-    transform: translate(-2%, -3%);
-  }
-  20% {
-    transform: translate(-4%, 2%);
-  }
-  30% {
-    transform: translate(2%, -4%);
-  }
-  40% {
-    transform: translate(-2%, 5%);
-  }
-  50% {
-    transform: translate(-4%, 2%);
-  }
-  60% {
-    transform: translate(3%, 0);
-  }
-  70% {
-    transform: translate(0, 3%);
-  }
-  80% {
-    transform: translate(-3%, 0);
-  }
-  90% {
-    transform: translate(2%, 2%);
-  }
-  100% {
-    transform: translate(1%, 0);
-  }
+/* Hide SVG filter from document flow */
+svg[height='0'] { 
+  position: fixed;
+  top: -1px;
+  left: -1px;
+  width: 1px;
+  height: 1px;
+  opacity: 0;
+  pointer-events: none;
 }
